# gtm-configure

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
agents/: openai.yaml
references/01-orientation/: official-source-policy.md  utility-contract.md
references/02-execution/: analytics-tags.md  analytics-vendors.md  client-side-object-surface.md  cmp-consent.md  cmp-platform-patterns.md  configuration-contract.md  conversion-linker-cross-domain.md  data-contract-and-transformations.md  first-party-data.md  ga4-collection-safety.md  google-consent-mode.md  implementation-workflow.md  media-criteo.md  media-floodlight.md  media-google-ads.md  media-linkedin.md  media-meta.md  media-microsoft-ads.md  media-pinterest.md  media-reddit.md  media-snapchat.md  media-tags.md  media-tiktok.md  media-x.md  multi-destination-routing.md  naming-and-reuse.md  template-governance.md  tool-adapters.md  tracking-plan-fidelity-and-conformance.md  transformation-patterns.md  triggers-and-variables.md  vendor-consent-modes.md
references/03-judgement/: acceptance-and-handoff.md
scripts/: build_skill_package.py  check_release.py  diff_object_graph.py  validate_configuration_contract.py  validate_contract_conformance.py
tests/: test_configuration_contract_schema.py  test_configuration_scenarios.py  test_contract_conformance.py  test_forward_test_cases.py  test_object_graph_diff.py  test_release.py  test_semantic_scenarios.py  test_skill_contract.py
tests/fixtures/: forward_test_cases.json  (+3 more)
