[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "configure-gtm"
version = "2.1.0"
description = "Agent-neutral, statically verifiable client-side GTM configuration skill for expert web analysts"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["ruff>=0.12,<1"]

[tool.setuptools]
packages = []

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
